adding feywild content/dungeon

--- a/data/Craftsmanship.wiki
+++ b/data/Craftsmanship.wiki
@@ -39,5 +39,7 @@ An introduction of a new primary skill would mean another possible dump stat for
   Michelle Manson Mason's her Mansion from the finest stone.
 	Centuries from now, people gaze at her work, and wonder who would ever build a stone henge?
 
+  Judging Jim wants to know if he's getting a good deal from a vendor, he's not very wise to see through the salemanship, but knows a good product when he sees one. 
+
   ETC...
  
