--- a/data/AkumaFruits.wiki
+++ b/data/AkumaFruits.wiki
@@ -67,4 +67,4 @@ THARIZDUN REBORN
 5. Metal Allergenist - Iron/Steel causes a rash, Platinum causes muscle spasms, Gold causes sneezing, Silver causes nausia, Copper causes hiccups, Dimeritium causes nothing, Etherium causes a blackout
 6. Tasty - the user's body has a delectible flavor like a sugary desert, attacts an abnormal amount of bugs and wildlife to them self based on the scent
 7. Stomach of Holding - the user's stomach takes on the traits of the bag of holding, and thusly no longer needs to pass food, but still gets hungry like normal.
-8. 
+8. Dry - the user's body loses all moisture, turning them into a prune, but this causes no discomfort. Consumed water dissapears. The user does not get thirsty, though they still get hungry as usual.
