adding more feywild content

--- a/data/Feywild Towns.wiki
+++ b/data/Feywild Towns.wiki
@@ -1,3 +1,33 @@
 ﻿++ Feywild Towns
+All islands are slightly larger due to receeded water lines.
 
-[Korro Kurro] - (Nowa Huta)
+
+[Korro Kurro] - (Nowa Huta) Korred village
+
+[Nahiri] - (Marine HQ), Kor city named after a founding member who was responsible for banishing the ancient eldrazi
+
+[Tajuru] - (Fiore), friendly Tajuru elves live in this city, their version of Fiore has a much receeded ocean, making the outer islands part of the main body
+
+[Otis] - (Augsburg), a lush farming town of Firbolg who both farm crops and raise animals
+
+[Bright Cliffs] - (Gorda), Tabaxi village can be found here. due to the receeded water lines, the island is surrounded by steep cliffs
+
+[Pumanath] - (Ak'anon), Triton vilage that is almost completely under water, save for a small docking area for trade. The village mainly comprises of the "mines of Ak'anon" adapted to a livable lush area.
+
+[Taipan] - (Arabasta), grand city of the Yuan-Ti
+
+[Ko Foren] - (Dun Morhen), wild land of giant beasts
+
+[Rodul] - (Odus), mysterious island of tricks
+
+(Faydwer)
+  [Anura] - (Felwithe), home of the froglike Grung (pg 156 of Volos)
+  [Buntri] - (Kaladim), home of deepgnomes
+  
+(Kunark)  
+  [Formicid] - (Luthadel), home of the antlike evil Neogi (pg 179 of Volos) that occasionally attack other lands to expand thier enormous colony
+  (Kalas)
+  
+[Eukar] - (Neriak), home of the Vegepygmies, small plant people   
+
+
