--- a/data/Feywild.wiki
+++ b/data/Feywild.wiki
@@ -1,3 +1,8 @@
 ﻿++ Feywild
+TIME: 1 day = 1 minute in the main world
+
+Wonderous Creatures:
+Flail Snail (pg 144 of volos)
+Redcap (pg 188 of volos)
 
 [Feywild Towns]
