--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -17,7 +17,8 @@ XXXXXXX XXXXXXX
 
 XXXXXXX
 XXXXXXX
-XXXX
+XXXXXXX
+XX
 
 250g given to Shirrong for doing an etherium inlay, silvering and Maliabilis enchantment to Grogar's Carpenter's Sharktooth Quarterstaff
 -20 days - 18 days crafting - 2 days enchanting - DONE
@@ -537,3 +538,27 @@ The party + Bim the gnome travel to [Dun Morhen] with windwalk taking ~7 hours
 -[Grogar] gains knowledge of where [Gruumsh] is located
 
 [Krieger] teleports the group back to [3 Helms Deep]
+
+++++Session 35
+Long Rest
+
+[Marta] - modified a robe for Kreiger to accomodate his wings
+
+[Grogar] catches up with [Fargrim]
+
+Finish moving the cannons
+-move all ship inventory - bodies
+Long Rest
+-begin traveling to the new island
+-attunement of the brass orb switched from [Edan] to [Cael Caemond]
+
+[Lightning] recalls a memory of [Tearis Thex] about the day his temple/palace became consecrated
+
+[Daniel Milborne] is rescued by the party from bears
+-the party leads him into the Cave to the Feywild
+-sacrifice Daniel to Kadi to ask where King Trihelm's kingdom is
+-they progress to the portal to the Feywild
+-Croaker takes a peek down the portal
+
+
+
