adding group 3 notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -487,4 +487,24 @@ Meeting [Letho]
 
 [Tessa] leads 3 of [Don Kreig]'s men into a trap below deck where 10 marines then jump and apprehend them.
 
+++++Session 17
+-the three don kreig men were stripped to allow 3 more marines to join the party (8 total)
+-7 still in the ship
+
+-half orc slave is not a marine
+  -given a great axe
+  -given maces
+-[Quinn] buys [Thia] for 30gold
+  -leather armour
+  -given shortbow x20 arrows
  
+the party goes to the coliseum to take down [Don Kreig]
+  -[Peiron] ends up dying
+  -Don Kreig is slain
+  -[Tessa] does a convicing performance to pose [Plosive] as the Don 
+ 
+ NOTE: EXPERIENCE EARNED TO GIVE
+4 thugs 400
+1 gladiator 1800
+10 bandits 250
+2450
