--- a/data/Feywild.wiki
+++ b/data/Feywild.wiki
@@ -5,4 +5,8 @@ Wonderous Creatures:
 Flail Snail (pg 144 of volos)
 Redcap (pg 188 of volos)
 
+
+Plants:
+Coloca an enormous tree with leaves the size of buildings, when severed from the trunk, the leaves take flight, and are often controlled to transport people from island to island.
+
 [Feywild Towns]
