adding evil group notes

--- a/data/Edan.wiki
+++ b/data/Edan.wiki
@@ -11,7 +11,7 @@ Traits to be restored:
 -17 HP RESTORED
 -17 HP RESTORED
 -1 CON RESTORED
--1 CON 
--1 CON
--10 HP
+-1 CON RESTORED 
+-1 CON RESTORED
+-10 HP RESTORED
 -1 lvl 3 slot
