--- a/data/Kadi.wiki
+++ b/data/Kadi.wiki
@@ -9,3 +9,8 @@ Year of the Skulls ritual:
 
 When released by the Year of the Skulls ritual
     -will begin converting all of her followers into flameskulls and transcend them to her plane of existence
+    
+++++Minion
+  Chain Devil - pg 72
+        -appears as a departed loved one to the summoner ([Thia] for [Croaker])
+        -chains, mean, obedient
