--- a/data/Tajuru.wiki
+++ b/data/Tajuru.wiki
@@ -2,9 +2,25 @@
 
 (Fiore), friendly Tajuru elves live in this city, their version of Fiore has a much receeded ocean, making the outer islands part of the main body
 
+the city has fine elven stonework with towers/archers
+20ft tall with towers
 
 
 Lead by the Archmage [King Hazzan]
 
+Fire Beetle Farms
+    -coal is used to feed the Beetles
 
-Teleportation Circle can be found here
+
+Magic Academy of Corellon
+    -Teleportation Circle can be found here
+    -Wizard Spells from lvls 1 to 8 - 100g per spell level
+    
+High Bowery - Ehlonna - Elf F
+    -Oathbow (pg 183)- (1000g)
+    -Arrow of Slaying (beast) - (pg 152) (50g each)
+    -Dimeritium Arrows (+2 DMG), (100g per 20) (5g each)
+    -6x Quiver of Ehlonna (pg 189) - (600g)  
+        -60/120/120 arrows can be stored in the compartments
+    
+    
