--- a/data/Pumanath.wiki
+++ b/data/Pumanath.wiki
@@ -3,3 +3,4 @@
 (Ak'anon), Triton vilage that is almost completely under water, save for a small docking area for trade. The village mainly comprises of the "mines of Ak'anon" adapted to a livable lush area.
 
 Lead by Lord Prexus - (Kraken Priest pg 215 of Volos)
+    -can speak with the Kraken to prevent attacks, and defend Pumanath
