--- a/data/Pumanath.wiki
+++ b/data/Pumanath.wiki
@@ -2,5 +2,11 @@
 
 (Ak'anon), Triton vilage that is almost completely under water, save for a small docking area for trade. The village mainly comprises of the "mines of Ak'anon" adapted to a livable lush area.
 
+The Tritons have been suffering from a unqie disease that is said to have spread from fish coming from the great depths.
+
 Lead by Lord Prexus - (Kraken Priest pg 215 of Volos)
     -can speak with the Kraken to prevent attacks, and defend Pumanath
+    
+Infirmary
+    Diseased Tritons are being tended to, laid out on simple beds
+    
