--- a/data/Taipan.wiki
+++ b/data/Taipan.wiki
@@ -6,3 +6,8 @@ Wildlife includes:
 
 
 Lead by the Yuan Ti, [Queen Saheeli]
+
+
+Shamanic Temple of the Sands
+    -Staff of the Adder - 100g (pg 203)
+    -Staff of the Python - 100g (pg 204)
