--- a/data/Order of the Gauntlet.wiki
+++ b/data/Order of the Gauntlet.wiki
@@ -8,4 +8,6 @@ Members are given the priviledge to wander as they see fit to take justice into 
 -+1 Repor with all marines
 -free passage aboard Marine vessels
 
+[Luth] - executes the Order of Gauntlet physical exams
 [Letho]- Massive 7-foot tall man
+
