adding feywild content

--- a/data/Bol%27Shoy.wiki
+++ b/data/Bol%27Shoy.wiki
@@ -13,6 +13,8 @@ Weenies:
         
     -Gold Painted Wooden crowns! Be ready for the golden dusting! 3g each
         -Royal people seem to blend in better due to these sales (Edan)
+        
+    -Drinks! A Satyr selling ale and wine 1g per drink (festival prices)
 
 Guzhen(M) from [Bright Cliffs] [Canaith Bard College]
 Rjorn(M) from [Korro Kurro] [Doss Bard College]
