--- a/data/Formicid.wiki
+++ b/data/Formicid.wiki
@@ -1,3 +1,41 @@
 ﻿++ Formicid
 
 (Luthadel), home of the antlike evil Neogi (pg 179 of Volos) that occasionally attack other lands to expand thier enormous colony
+
+++++Heirarchy of Leadership:
+[Grand Master Chelinka]
+    A frequently challenged Neogi who has time and time again proven his place in the heirarchy of his people. Each challenger is poisoned and turned into "Great Old Master" to raise new Neogi. He gained his position in just the same way however by overpowering the previous leader [Grand Master Gakil].
+    -Wants nothing more to assert his authority onto all 
+
+(neogi masters pg 180 of volos)    
+-[Master Tanerk] - wants desperately to take Grand Master Chelinka down and claim the position for himself, but stays loyal through fear by the frequent reminders of others who have tried and failed and met a gruesome end.    
+-Lords Grumadak, Nadim, Trakar, Atumur, Thagur
+
+(neogi chiefs pg 180 of volos)
+These are Normal Neogi who have become masters of several groups of Umber Hulks (pg 292) and often raid/dominate lesser villages/towns
+-Thagall, Zazall, Ukrotur, Brakiz, Kraask, Zavizar, Sarerk, Karatar    
+    
+    
+++++Places of Interest:  
+
+Training Barracks
+    -most of [Formicid] is comprised of Training Barracks chambers where they are continuously growing their army for the next expansion. Chiefs are in charge of these and are in heated competition/pressure to have their soldiers be better than the others and dominate new lands as soon as possible.
+    
+Neogi Poison Farm Caves
+    -cared to by Hatchlings and Umber Hulk slaves
+    -creates the special poison used to create Great Old Masters (not for sale) - 100g per dose
+    -'Donor's have their Neogi poison bottled for sale (see Neogi pg 180) - 10g per dose
+    
+Umber Hulk Ranches
+    -tended to by Hatchlings that have managed to enslave an Umber Hulk
+    
+The Breeding Pits
+    -Great Old Master's lumps of flesh are tossed into this pit where countless Neogi hatchlings feast upon them and eachother. The pit is guarded by Umber Hulks that either become enslaved, or feast upon weak Neogi hatchlings that attempt to do so in their escape from the pit.
+    
+Grand Master's Chamber
+    Almost like a small arena, at one end is a marble throne ergonomically crafted for a Neogi to sit upon.
+    [Grand Master Chelinka] sits upon it, being lavishly spoiled by his exclusively Umber Hulk servants (10 in this room)
+    A map depicting the dominated villages in the [Greater Alfitaria] region is on display. 
+    
+++++Beholder Influence
+A crumbled stone passageway behind the map in the Grand Master's Chamber leads far and deep below to [Lantrokixos Lair]     
