--- a/data/Ko Foren.wiki
+++ b/data/Ko Foren.wiki
@@ -1,7 +1,16 @@
 ﻿++ Ko Foren
 
+Weeny:
+    -Shambling Mound attack! (pg 270)
+      much of the island is highly vegetated, and shambling mounds lay dormant waiting for creatures to pass over to engulf (Grapple +4)
+
 Wildlife:
     -Giant Apes (pg 323)
+    -Roc (pg 260)
+    -Blink Dogs (pg 318)
+    -Trolls (pg 291) surviving in small groups, regenerate limbs when predators attack, but have eaten enough blink dogs to take on their trait of blinking
+    -Bulette (pg 34)
+    -Tyrannosaurus Rex (pg 80)
 
 (wyvern lair) equivalent that has a Tarrasque at it's heart (pg 286)
 -when disturbed, he goes on a rampage, eating many of the beasts on the island before going back to his cave to rest.
