--- a/data/Tajuru.wiki
+++ b/data/Tajuru.wiki
@@ -13,7 +13,7 @@ Fire Beetle Farms
 
 
 Magic Academy of Corellon
-    -Lead by Sage Chelinka (Elf F, friendly, welcoming)
+    -Lead by Sage Belazaar (Elf F, friendly, welcoming)
     -Teleportation Circle can be found here
     -Wizard Spells from lvls 1 to 8 - 10 plat per spell level
     -Common magic supplies for sale
