adding more feywild content

--- a/data/King Hazzan.wiki
+++ b/data/King Hazzan.wiki
@@ -1,3 +1,11 @@
 ﻿++ King Hazzan
 
 Use Archmage (pg 342)
+
+Staff of the Great Treant
+    A staff that continues to grow after being decoratively carved along it's length. Like a bonsai on top.
+    -Can animate trees/plants
+    -Regrows after being broken
+    -Spike Growth spell as bonus
+    
+    
