--- a/data/Pumanath.wiki
+++ b/data/Pumanath.wiki
@@ -10,3 +10,15 @@ Lead by Lord Prexus - (Kraken Priest pg 215 of Volos)
 Infirmary
     Diseased Tritons are being tended to, laid out on simple beds
     
+Deep Sea Jewelry - Yohan - (Triton M) 
+    -Pearls (white, yellow, pink) - 100g
+    -Black Pearls - 500g
+    -Pearl Necklaces of "Proof against detection and location (pg 150 of DM)" - 200g
+        -pearls are magically hard to find, and only the best pearl divers can acquire them.
+    
+Shellery - Horhe - (Triton M)
+    -Medium "Mariner's Armors (pg 181)"
+        -Scale Shell (scale mail +1) - 250g
+        -Breast Shell (breastplate +1) - 600g
+        -Half Shell (half plate +1) - 950g
+        
