--- a/data/Otis.wiki
+++ b/data/Otis.wiki
@@ -12,6 +12,7 @@ Druidic Library:
     -[Beasts of the Depths]
     -[Coloca Farming Techniques]
     -[Vegepygmy Cookbook]
+    -[Materials of Legendary Craftsmen]
      
 Druid Shop
     -Focuses:
